--- a/.gitignore
+++ b/.gitignore
@@ -56,4 +56,8 @@ htmlcov/
 credentials.json
 token.json
 client_secret*.json
-service-account*.json 
+service-account*.json
+
+# Generated Data
+data/
+*.mp3 
